--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,16 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ef8eb7">  <td>24/02/17 17:19:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String,java.lang.String)[pri:0, instance:testCases.TC_001_AccountRegisttrationTest@14dda234]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1964434661</td>   <td></td> </tr>
-<tr bgcolor="ef8eb7">  <td>24/02/17 17:19:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String,java.lang.String)[pri:0, instance:testCases.TC_001_AccountRegisttrationTest@33aeca0b]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@1585571244</td>   <td></td> </tr>
-<tr bgcolor="ef8eb7">  <td>24/02/17 17:19:51</td>   <td>5548</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:testCases.TC_001_AccountRegisttrationTest@14dda234]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1964434661</td>   <td></td> </tr>
-<tr bgcolor="ef8eb7">  <td>24/02/17 17:19:53</td>   <td>7698</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:testCases.TC_001_AccountRegisttrationTest@33aeca0b]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@1585571244</td>   <td></td> </tr>
-<tr bgcolor="e26a76">  <td>24/02/17 17:19:47</td>   <td>1865</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_001_AccountRegisttrationTest.verify_account_registration()[pri:0, instance:testCases.TC_001_AccountRegisttrationTest@14dda234]">verify_account_registration</td> 
-  <td>TestNG-tests-1@1964434661</td>   <td></td> </tr>
-<tr bgcolor="e26a76">  <td>24/02/17 17:19:50</td>   <td>4610</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_001_AccountRegisttrationTest.verify_account_registration()[pri:0, instance:testCases.TC_001_AccountRegisttrationTest@33aeca0b]">verify_account_registration</td> 
-  <td>TestNG-tests-2@1585571244</td>   <td></td> </tr>
+<tr bgcolor="cdeda2">  <td>24/02/17 18:22:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String,java.lang.String)[pri:0, instance:testCases.TC_002_LoginTest@74a6a609]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="cdeda2">  <td>24/02/17 18:22:54</td>   <td>2998</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String,java.lang.String)[pri:0, instance:testCases.TC_001_AccountRegisttrationTest@424fd310]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="cdeda2">  <td>24/02/17 18:22:54</td>   <td>2891</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:testCases.TC_002_LoginTest@74a6a609]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="cdeda2">  <td>24/02/17 18:23:00</td>   <td>9141</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:testCases.TC_001_AccountRegisttrationTest@424fd310]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="e26a76">  <td>24/02/17 18:22:53</td>   <td>2083</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_002_LoginTest.verifyLogin()[pri:0, instance:testCases.TC_002_LoginTest@74a6a609]">verifyLogin</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="b3606b">  <td>24/02/17 18:22:57</td>   <td>6102</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_001_AccountRegisttrationTest.verify_account_registration()[pri:0, instance:testCases.TC_001_AccountRegisttrationTest@424fd310]">verify_account_registration</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
 </table>
