--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -4,7 +4,40 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>testCases.TC_003_LoginTestDD</td>
+<td>testCases.TC_001_AccountRegistrationTest</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verify_account_registration</td>
+<td>regression sanity master </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>setup</td>
+<td>regression sanity master </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>tearDown</td>
+<td>regression sanity master </td>
+</tr>
+<tr>
+<td>testCases.TC_002_LoginTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
@@ -19,7 +52,8 @@
 <tr>
 <td>&nbsp;</td>
 <td>setup</td>
-<td>&nbsp;</td></tr>
+<td>regression sanity master </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
@@ -32,5 +66,6 @@
 <tr>
 <td>&nbsp;</td>
 <td>tearDown</td>
-<td>&nbsp;</td></tr>
+<td>regression sanity master </td>
+</tr>
 </table>
